# video-analytics-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: handlers.py  main.py
core/: config.py  database.py
migrations/: 001_init_tables.sql
scripts/: init_db.py  load_data.py
services/: llm_service.py  query_service.py
