[tool.poetry]
name = "video-analytics-bot"
version = "1.0.0"
description = "Telegram bot for video analytics"
authors = ["Denis Lobyrev <answer4you@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.0"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
aiohttp = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"